--- a/static/css.css
+++ b/static/css.css
@@ -323,10 +323,10 @@ p{margin:0;}
 #page-newhouse-index .bd .item-last { margin-right: 0;}
 #page-newhouse-index .bd .item.hover { border-color: #62ab00; }
 
-#page-newhouse-list .block-selection { height: 45px; line-height: 45px; background-color: #f6f6f6; border: 1px solid #ddd; padding: 0 24px; }
+#page-newhouse-list .block-selection { margin-bottom: 12px; height: 45px; line-height: 45px; background-color: #f6f6f6; border: 1px solid #ddd; padding: 0 24px; }
 #page-newhouse-list .block-selection a.item { display: inline-block; background-color: #62ab00; line-height: 18px; color: #fff; padding: 3px;}
 
-#page-newhouse-list .block-list { margin-top: 12px; }
+#page-newhouse-list .block-list { border-top: 1px dotted #ddd; }
 #page-newhouse-list .block-list .item { padding: 24px 24px 24px 0; border-bottom: 1px dotted #ddd; }
 #page-newhouse-list .block-list .item .image { float:left; width: 230px; }
 #page-newhouse-list .block-list .item .description{ margin-left: 270px; }
@@ -418,6 +418,7 @@ p{margin:0;}
 #block-newhouse-quick-search .letters li { margin-right: 3px; background-color: #62ab00; width: 24px; text-align: center;}
 #block-newhouse-quick-search .letters li a { color: #fff;}
 #block-newhouse-quick-search .letters li.hover { background-color: #333; }
+#block-newhouse-quick-search .letters li.active{ background-color: #333; }
 
 #block-buyer-guide .hd { border-bottom: 1px solid #62ab00; margin-bottom: 24px;}
 #block-buyer-guide .guide{ border: 1px solid #ddd; text-align:center; float: left; width: 120px; height: 140px; line-height: 2;}
