--- a/templates/lib.tmpl
+++ b/templates/lib.tmpl
@@ -71,19 +71,14 @@
 			<dt>区域： </dt>
 			<dd>
 				<ul>
-					<li><a href='#'>全部</a></li>
-					<li><a href='#'>中心城区</a></li>
-					<li><a href='#'>南湖新区</a></li>
-					<li><a href='#'>秀洲新区</a></li>
-					<li><a href='#'>城北区</a></li>
-					<li><a class='active selected' href='#'>国际商务区</a></li>
-					<li><a href='#'>湘家荡</a></li>
-					<li><a href='javascript:void(0)'>五县</a></li>
-					<li><a href='#'>嘉善</a></li>
-					<li><a href='#'>海宁</a></li>
-					<li><a href='#'>海盐</a></li>
-					<li><a href='#'>平湖</a></li>
-					<li><a href='#'>桐乡</a></li>
+					<li><a class='active' href='{{queryN $.NewhouseQuickSearchPath "area" nil "p" nil}}'>全部</a></li>
+					{{range $.CONTEXT.KVs.Area.Nodes}}
+						{{if queryE $.NewhouseQuickSearchPath "area" .Value}}
+							<li><a class='active selected' href='{{queryN $.NewhouseQuickSearchPath "area" nil "p" nil}}'>{{.Name}}</a></li>
+						{{else}}
+							<li><a class='{{if queryE $.NewhouseQuickSearchPath "area" .Value}}active selected{{end}}' href='{{queryN $.NewhouseQuickSearchPath "area" .Value "p" nil}}'>{{.Name}}</a></li>
+						{{end}}
+					{{end}}
 				</ul>
 			</dd>
 		</dl>
@@ -91,27 +86,30 @@
 			<dt>楼型： </dt>
 			<dd>
 				<ul>
-					<li><a href='#'>全部</a></li>
-					<li><a class='active selected' href='#'>低层</a></li>
-					<li><a href='#'>多层</a></li>
-					<li><a href='#'>小高层</a></li>
-					<li><a href='#'>超高层</a></li>
+					<li><a class='active' href='{{queryN $.NewhouseQuickSearchPath "floor" nil "p" nil}}'>全部</a></li>
+					{{range $.CONTEXT.KVs.Floor.Nodes}}
+						{{if queryE $.NewhouseQuickSearchPath "floor" .Value}}
+							<li><a class='active selected' href='{{queryN $.NewhouseQuickSearchPath "floor" nil "p" nil}}'>{{.Name}}</a></li>
+						{{else}}
+							<li><a class='{{if queryE $.NewhouseQuickSearchPath "floor" .Value}}active selected{{end}}' href='{{queryN $.NewhouseQuickSearchPath "floor" .Value "p" nil}}'>{{.Name}}</a></li>
+						{{end}}
+					{{end}}
 					<li><a class='primary' href='#'>楼层介绍</a></li>
 				</ul>
 			</dd>
 		</dl>
 		<dl class='clearfix'>
-			<dt>用途： </dt>
+			<dt>用途：</dt>
 			<dd>
 				<ul>
-					<li><a class='active' href='#'>全部</a></li>
-					<li><a href='#'>普通住宅</a></li>
-					<li><a href='#'>大平层</a></li>
-					<li><a href='#'>别墅</a></li>
-					<li><a href='#'>单身公寓</a></li>
-					<li><a href='#'>LOFT</a></li>
-					<li><a href='#'>写字楼</a></li>
-					<li><a href='#'>商铺</a></li>
+					<li><a class='active' href='{{queryN $.NewhouseQuickSearchPath "usage" nil "p" nil}}'>全部</a></li>
+					{{range $.CONTEXT.KVs.Usage.Nodes}}
+						{{if queryE $.NewhouseQuickSearchPath "usage" .Value}}
+							<li><a class='active selected' href='{{queryN $.NewhouseQuickSearchPath "usage" nil "p" nil}}'>{{.Name}}</a></li>
+						{{else}}
+							<li><a class='' href='{{queryN $.NewhouseQuickSearchPath "usage" .Value "p" nil}}'>{{.Name}}</a></li>
+						{{end}}
+					{{end}}
 				</ul>
 			</dd>
 		</dl>
@@ -119,15 +117,16 @@
 			<dt>价格： </dt>
 			<dd>
 				<ul>
-					<li><a class='active' href='#'>全部</a></li>
-					<li><a href='#'>6千元以下</a></li>
-					<li><a href='#'>6千-7千元</a></li>
-					<li><a href='#'>7千-8千元</a></li>
-					<li><a href='#'>8千-9千元</a></li>
-					<li><a href='#'>9千-1万元</a></li>
-					<li><a href='#'>1万元以上</a></li>
+					<li><a class='active' href='{{queryN $.NewhouseQuickSearchPath "price" nil "p" nil}}'>全部</a></li>
+					{{range $.CONTEXT.KVs.Price.Nodes}}
+						{{if queryE $.NewhouseQuickSearchPath "price" .Value}}
+							<li><a class='active selected' href='{{queryN $.NewhouseQuickSearchPath "price" nil "p" nil}}'>{{.Name}}</a></li>
+						{{else}}
+							<li><a class='' href='{{queryN $.NewhouseQuickSearchPath "price" .Value "p" nil}}'>{{.Name}}</a></li>
+						{{end}}
+					{{end}}
 					<li><a class='primary' href='#'>总价</a></li>
-					<li><a class='primary' href='#'>价格待定</a></li>
+					<li><a class='primary' href='{{queryN $.NewhouseQuickSearchPath "price" nil "pt" "-" "p" nil}}'>价格待定</a></li>
 				</ul>
 			</dd>
 		</dl>
@@ -135,15 +134,14 @@
 			<dt>特色： </dt>
 			<dd>
 				<ul>
-					<li><a class='active' href='#'>全部</a></li>
-					<li><a href='#'>刚需房</a></li>
-					<li><a href='#'>改善房</a></li>
-					<li><a href='#'>团购房</a></li>
-					<li><a href='#'>学区房</a></li>
-					<li><a href='#'>精装修</a></li>
-					<li><a href='#'>现房</a></li>
-					<li><a href='#'>养老地产</a></li>
-					<li><a href='#'>投资地产</a></li>
+					<li><a class='active' href='{{queryN $.NewhouseQuickSearchPath "feature" nil "p" nil}}'>全部</a></li>
+					{{range $.CONTEXT.KVs.Features.Nodes}}
+						{{if queryE $.NewhouseQuickSearchPath "feature" .Value}}
+							<li><a class='active selected' href='{{queryN $.NewhouseQuickSearchPath "feature" nil "p" nil}}'>{{.Name}}</a></li>
+						{{else}}
+							<li><a class='' href='{{queryN $.NewhouseQuickSearchPath "feature" .Value "p" nil}}'>{{.Name}}</a></li>
+						{{end}}
+					{{end}}
 				</ul>
 			</dd>
 		</dl>
@@ -151,11 +149,14 @@
 			<dt>状态： </dt>
 			<dd>
 				<ul>
-					<li><a class='active' href='#'>全部</a></li>
-					<li><a href='#'>待售</a></li>
-					<li><a href='#'>期房</a></li>
-					<li><a href='#'>现房</a></li>
-					<li><a href='#'>尾房</a></li>
+					<li><a class='active' href='{{queryN $.NewhouseQuickSearchPath "schedule" nil "p" nil}}'>全部</a></li>
+					{{range $.CONTEXT.KVs.Schedule.Nodes}}
+						{{if queryE $.NewhouseQuickSearchPath "schedule" .Value}}
+							<li><a class='active selected' href='{{queryN $.NewhouseQuickSearchPath "schedule" nil "p" nil}}'>{{.Name}}</a></li>
+						{{else}}
+							<li><a class='' href='{{queryN $.NewhouseQuickSearchPath "schedule" .Value "p" nil}}'>{{.Name}}</a></li>
+						{{end}}
+					{{end}}
 				</ul>
 			</dd>
 		</dl>
@@ -164,32 +165,13 @@
 			<dt>字母搜索</dt>
 			<dd>
 				<ul>
-					<li class='hoverable clickable'><a href='#'>A</a></li>
-					<li class='hoverable clickable'><a href='#'>B</a></li>
-					<li class='hoverable clickable'><a href='#'>C</a></li>
-					<li class='hoverable clickable'><a href='#'>D</a></li>
-					<li class='hoverable clickable'><a href='#'>E</a></li>
-					<li class='hoverable clickable'><a href='#'>F</a></li>
-					<li class='hoverable clickable'><a href='#'>G</a></li>
-					<li class='hoverable clickable'><a href='#'>H</a></li>
-					<li class='hoverable clickable'><a href='#'>I</a></li>
-					<li class='hoverable clickable'><a href='#'>J</a></li>
-					<li class='hoverable clickable'><a href='#'>K</a></li>
-					<li class='hoverable clickable'><a href='#'>L</a></li>
-					<li class='hoverable clickable'><a href='#'>M</a></li>
-					<li class='hoverable clickable'><a href='#'>N</a></li>
-					<li class='hoverable clickable'><a href='#'>O</a></li>
-					<li class='hoverable clickable'><a href='#'>P</a></li>
-					<li class='hoverable clickable'><a href='#'>Q</a></li>
-					<li class='hoverable clickable'><a href='#'>R</a></li>
-					<li class='hoverable clickable'><a href='#'>S</a></li>
-					<li class='hoverable clickable'><a href='#'>T</a></li>
-					<li class='hoverable clickable'><a href='#'>U</a></li>
-					<li class='hoverable clickable'><a href='#'>V</a></li>
-					<li class='hoverable clickable'><a href='#'>W</a></li>
-					<li class='hoverable clickable'><a href='#'>X</a></li>
-					<li class='hoverable clickable'><a href='#'>Y</a></li>
-					<li class='hoverable clickable'><a href='#'>Z</a></li>
+					{{range .Letters}}
+						{{if queryE $.NewhouseQuickSearchPath "letter" .}}
+							<li class='active selected hoverable clickable'><a href='{{queryN $.NewhouseQuickSearchPath "letter" . "p" nil}}'>{{upper .}}</a></li>
+						{{else}}
+							<li class='hoverable clickable'><a href='{{queryN $.NewhouseQuickSearchPath "letter" . "p" nil}}'>{{upper .}}</a></li>
+						{{end}}
+					{{end}}
 				</ul>
 			</dd>
 		</dl>
@@ -207,6 +189,13 @@
 		<ul>
 			<li class='pic'><a href='#'><img src='/images/index/sample-delivery.jpg' /></a></li>
 			<li class='rankings'>
+				{{range $i,$v := .NewhouseFocus}}
+					<dl class='{{if eq $i 0}}active{{end}} clearfix'>
+						<dd class='price'>{{.Price}} 元/㎡ <i class='icon-price-start'></i></dd>
+						<dt><i class='icon-dot'></i> <a href='/newhouse/o{{.Id}}.html'>{{.Name}}</a></dt>
+					</dl>
+				{{end}}
+				<!-- 
 				<dl class='active clearfix'>
 					<dd class='price'>5200元/㎡ <i class='icon-price-start'></i></dd>
 					<dt><i class='icon-dot'></i> 经房·浅水湾</dt>
@@ -239,6 +228,7 @@
 					<dd class='price'>5200元/㎡ <i class='icon-price-average'></i></dd>
 					<dt><i class='icon-dot'></i> <a href='#'>徽商大厦</a></dt>
 				</dl>
+				 -->
 			</li>
 		</ul>
 	</div>
@@ -255,6 +245,13 @@
 		<ul>
 			<li class='pic'><a href='#'><img src='/images/index/sample-delivery.jpg' /></a></li>
 			<li class='rankings'>
+				{{range $i, $v := .NewhouseRecommends}}
+					<dl class='{{if eq $i 0}}active{{end}} clearfix'>
+						<dd class='price'>{{.Price}} 元/㎡ <i class='icon-price-start'></i></dd>
+						<dt><i class='icon-dot'></i> <a href='/newhouse/o{{.Id}}.html'>{{.Name}}</a></dt>
+					</dl>
+				{{end}}
+				<!-- 
 				<dl class='active clearfix'>
 					<dd class='price'>5200元/㎡ <i class='icon-price-start'></i></dd>
 					<dt><i class='icon-dot'></i> 经房·浅水湾</dt>
@@ -287,6 +284,7 @@
 					<dd class='price'>5200元/㎡ <i class='icon-price-average'></i></dd>
 					<dt><i class='icon-dot'></i> <a href='#'>徽商大厦</a></dt>
 				</dl>
+				 -->
 			</li>
 		</ul>
 	</div>
@@ -303,7 +301,7 @@
 			<ul>
 				<li class='pic'><a href='#'><img src='/images/index/sample-delivery.jpg' /></a></li>
 				<li>
-					{{ range $i, $o := .Deliveries }}
+					{{ range $i, $o := .NewhouseDeliveries }}
   						<dl class='{{if eq $i 0}}active{{end}} clearfix'>
   							<dd>{{if not (equals .DeliveryDate "")}}{{.DeliveryDate}}{{else}}{{.SDelivery}}{{end}}</dd>
   							<dt><i class='icon-dot'></i> <a href='/newhouse/o{{.Id}}.html'>{{.Name}}</a></dt>
@@ -360,7 +358,7 @@
 				<li class='pic'><a href='#'><img src='/images/index/sample-delivery.jpg' /></a></li>
 				
 				<li>
-					{{ range $i, $o := .Opens }}
+					{{ range $i, $o := .NewhouseOpens }}
   						<dl class='{{if eq $i 0}}active{{end}} clearfix'>
   							<dd>{{if not (equals .OpenDate "")}}{{.OpenDate}}{{else}}{{.SOpen}}{{end}}</dd>
   							<dt><i class='icon-dot'></i> <a href='/newhouse/o{{.Id}}.html'>{{.Name}}</a></dt>
